Renamed package. Will begin adding hackathon specific things after this commit.

--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'application'
 
-mainClassName='com.omsface.learning.dropwizard.DropWizardServer'
+mainClassName='com.spacemix.api.DropWizardServer'
 
 sourceCompatibility = 1.8
 version = '1.0'
